[package]
name = "random-rs"
version = "0.2.4"
edition = "2021"
authors = ["one-d-wide <one-d-wide@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/one-d-wide/random-rs"

[dependencies]
clap = { version = "4", features = [ "derive" ] }
rand = { version = "0", features = [ "std_rng" ] }
